# zhongguoruanjianbei2026

./: .gitattributes  .gitignore  README.md  docker-compose.context.yml  docker-compose.judge0.yml  judge0.conf  package-lock.json  package.json  planner-test-results.md
React-Chat/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
React-Chat/src/: App.tsx  main.tsx
backend/: .env  .env.example  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/data/: workbenches.json
backend/prisma/: dev.db  schema.prisma  seed.ts
backend/src/: index.ts
docs/: 11种课程报告内容依据.md  HyperFrames-HeyGen-集成设计文档.md  Workspace-Agent-V2-Cline对照上下文设计.md  Workspace-Agent-V2-写工具设计.md  Workspace-Agent-V2-设计文档.md  Workspace-Agent-V2-读工具设计.md  系统功能说明书.md  轻量可视化讲解设计文档.md
docs/数据库实验/: 02课题背景.md  03系统需求分析.md  06表结构列表及建表语句.md  07数据查询功能语句及说明.md  07补充-ceshi1用户核心查询语句及结果说明.md  08存储过程代码及说明.md  09触发器代码及说明.md  ER核心模型草案.md  (+7 more)
frontend/: .env.desktop.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
presenton_data/: userConfig.json.bak
scripts/: autodl-ai-course-kg-worker.py  check-context-stack.sh  demo.mjs  deploy-ai-course-kg-autodl.sh  deploy-video-analysis-autodl.sh  dev.mjs  install-context-watchdog.sh  repair-algorithm-visual-lab.js  set-algorithm-visual-lab-three-columns.js  start-ai-course-kg-tunnel.sh  start-context-tunnel.sh  start-video-analysis-tunnel.sh
(+342 files in other folders)
