[package]
name = "pp1-desktop"
version = "0.1.0"
description = "Desktop shell for the PP1 web client"
authors = ["PP1"]
edition = "2021"

[lib]
name = "pp1_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

